force-app/main/default/objects/WeatherInfo__c/WeatherInfo__c.object-meta.xml
<CustomObject>
    <description>This object will be used to store the weather information like temperature, description etc.</description>
    <label>Weather Info</label>
    <nameField>
        <displayFormat>W{000000}</displayFormat>
        <label>Weather Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weather Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>