force-app/main/default/objects/WeatherInfo__c/fields/Humidity__c.field-meta.xml
<CustomField>
    <fullName>Humidity__c</fullName>
    <description>This field will store the location humidity in percentage format.</description>
    <label>Humidity %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>