force-app/main/default/objects/WeatherInfo__c/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <description>This field will store the icon to display for the weather conditions.</description>
    <label>Icon</label>
    <length>10</length>
    <type>Text</type>
</CustomField>