force-app/main/default/objects/WeatherInfo__c/fields/Temperature_Degree_celcius__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Degree_celcius__c</fullName>
    <description>This field will store the temperature for the city in Celsius format.</description>
    <label>Temperature (Degree Celsius)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>