force-app/main/default/objects/WeatherInfo__c/fields/Wind_Speed__c.field-meta.xml
<CustomField>
    <fullName>Wind_Speed__c</fullName>
    <description>To store the wind speed in metre/sec</description>
    <inlineHelpText>Wind speed in metre/sec</inlineHelpText>
    <label>Wind Speed</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>